--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,29 @@
-.idea
+!web/src
+!web/public
+!web/package.json
+!web/package-lock.json
+
+# intellij file
+/.idea
+.log
+
+#  macOS file
+.DS_Store
+
+# testing with `Jest`
+/coverage
+
+# production
+/web/build
+
+# misc
+/web/node_modules
+/web/.env
+/web/.env.*
+# dependencies
+/web/.pnp.*
+/web/.pnp.js
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
