first commit : warning 삭제 및 devDependencies 주입

--- a/web/package.json
+++ b/web/package.json
@@ -30,5 +30,8 @@
       "last 1 safari version",
       "last 1 edge version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
