[F] 배포 후 정상적으로 web 동작하게 변경

--- a/web/package.json
+++ b/web/package.json
@@ -33,6 +33,7 @@
       "last 1 edge version"
     ]
   },
+  "homepage": "https://newfly101.github.io/netflix_clone",
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
