--- a/web/package.json
+++ b/web/package.json
@@ -35,6 +35,7 @@
   },
   "homepage": "https://newfly101.github.io/netflix_clone",
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "gh-pages": "^6.2.0"
   }
 }
