--- a/web/package.json
+++ b/web/package.json
@@ -34,6 +34,10 @@
       "last 1 edge version"
     ]
   },
+  "homepage": "/",
+  "engines": {
+    "node": ">=18"
+  },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "gh-pages": "^6.2.0"
